Add comments page at end of survey, prevent accidental delays or double-clicks from skipping questions...

--- a/surver.config.json
+++ b/surver.config.json
@@ -5,6 +5,7 @@
     {"name" : "nasa_tlx_en", "location": "surveys/nasa_tlx_en.json"},
     {"name" : "nasa_tlx_ranking_en", "location": "surveys/nasa_tlx_ranking_en.json"},
     {"name" : "pause", "location": "surveys/pause_en.json"},
-    {"name" : "finished", "location": "surveys/finished_en.json"}
+    {"name" : "finished", "location": "surveys/finished_en.json"},
+    {"name" : "comments", "location": "surveys/comments.json"}
   ]
 }
