--- a/surver.config.json
+++ b/surver.config.json
@@ -6,7 +6,7 @@
     {"name" : "nasa_tlx_ranking_en", "location" : "surveys/nasa_tlx_ranking_en.json"},
     {"name" : "pause",               "location" : "surveys/pause_en.json"},
     {"name" : "finished",            "location" : "surveys/finished_en.json"},
-    {"name" : "comments",            "location" : "surveys/comments.json"}
+    {"name" : "comments",            "location" : "surveys/comments.json"},
     {"name" : "godspeed_I_en",       "location" : "surveys/godspeed_surveys/godspeed_I_en.json"},
     {"name" : "godspeed_II_en",      "location" : "surveys/godspeed_surveys/godspeed_II_en.json"},
     {"name" : "godpseed_III_en",     "location" : "surveys/godspeed_surveys/godspeed_III_en.json"},
